ui/src/components/Modal/Modal.module.css
.Modal {
    width: 460px;
    position: fixed;
    background-color: #FFF;
    top: 15px;
    right: 15px;
    bottom: 15px;
    border-radius: 10px;
    padding: 27px 29px;
    box-shadow: -2px 2px 20px 2px #e9e5e5;
    display: none;
    flex-direction: column;
    justify-content: center;
    overflow: auto;
}

.ModalShow {
    display: flex;
}


.ModalHeader {
    display: flex;
    margin-bottom: 41px;
}

.ModalTitle {
    flex-grow: 1;
    color: #323232;
    font-family: Inter;
    font-size: 20px;
    font-style: normal;
    font-weight: 500;
    line-height: 20px;
}

.CloseIconContainer{ 
    cursor: pointer;
    position: fixed;
    top: 35px;
    right: 35px;
}

